[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# sqlx = { version = "0.8", features = [
#     "runtime-tokio-rustls",
#     "postgres",
#     "macros"
# ] }

dotenvy = "0.15"
# sea-orm = "1.1.20"
sea-orm = { version = "1.1.20", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-orm-cli = "1.1.20"
